--- a/src/options/index.html
+++ b/src/options/index.html
@@ -5,7 +5,7 @@
   <base target="_blank">
   <title>Options</title>
 </head>
-<body>
+<body style="min-height: 100%;">
   <div id="app"></div>
   <script type="module" src="./main.ts"></script>
 </body>
